fixing design and alignment issues for mobile devices

--- a/frontend/css/categories-devices.css
+++ b/frontend/css/categories-devices.css
@@ -99,7 +99,7 @@ header {
   display: none;
 }
 
-input[type="checkbox"]:checked + .menu {
+input[type='checkbox']:checked + .menu {
   left: 0;
 }
 
@@ -269,7 +269,6 @@ main {
   /* border: 3px solid rgb(0, 179, 255); */
 }
 
-
 .loader {
   width: 48px;
   height: 48px;
@@ -284,7 +283,7 @@ main {
 }
 
 .loader::after {
-  content: "";
+  content: '';
   box-sizing: border-box;
   position: absolute;
   left: 4px;
@@ -327,30 +326,30 @@ main {
   display: flex;
   flex-flow: column;
   align-items: center;
-  justify-content: center;
-  position: relative;
-  top: 0;
+
   cursor: pointer;
   margin-bottom: 2rem;
+  padding: 4px;
 
   border: 1px solid rgb(182, 182, 182);
-  width: 45%;
-  height: 23rem;
+
+  width: 47%;
 
   /* ~~~~ FOR DEBUGGING~~~~*/
   /* border: 3px solid rgb(0, 255, 17); */
 }
 
-.rear-image {
+/* .rear-image {
   opacity: 0;
   z-index: -1;
-}
+} */
 
 .image-item {
-  height: 70%;
-  width: 95%;
+  width: 100%;
+  height: 60%;
+  
+  margin-bottom: 2rem;
   object-fit: cover;
-  margin: 5px;
 
   /* ~~~~ FOR DEBUGGING~~~~*/
   /* border: 3px solid red; */
@@ -374,10 +373,13 @@ main {
 
 .item-title {
   position: relative;
+  text-align: center;
 }
 
 .item-price {
   position: relative;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
 }
 
 .item-description {
@@ -516,7 +518,7 @@ main {
 
 .small-image {
   padding: 5px;
-  width: 25%;
+  width: 100%;
   /* height: 100%; */
 
   /* border: 1px solid rgb(36, 190, 232); */
@@ -632,7 +634,6 @@ main {
   padding-top: 0.5rem;
   background-color: rgb(132, 132, 132);
   font-family: 'Raleway';
-
 
   /* ~~~~ FOR DEBUGGING~~~~*/
   /* border: 5px solid rgb(255, 51, 0); */
